# AOC

./: .gitignore
2021/p25/: CHANGELOG.md  p25.cabal  package.yaml
2022/p1/: Cargo.toml
2022/p17/: Cargo.toml  bench.sh
2022/p17/src/: main.rs
2022/p2/: Cargo.toml
2023/p1/: p1.cabal
2023/p10/: CHANGELOG.md  p10.cabal  package.yaml  test3_input.txt
2023/p11/: p11.cabal
2023/p12/: CHANGELOG.md  p12.cabal  package.yaml
2023/p13/: CHANGELOG.md  p13.cabal  package.yaml
2023/p14/: CHANGELOG.md  p14.cabal  package.yaml
2023/p15/: CHANGELOG.md  p15.cabal  package.yaml
2023/p16/: out.txt  p16.cabal  package.yaml  test_input2.txt  test_out.txt
2023/p17/: CHANGELOG.md  p17.cabal  package.yaml
2023/p2/: p2.cabal
2023/p3/: p3.cabal
2023/p4/: p4.cabal
2023/p5/: CHANGELOG.md  p5.cabal
2023/p6/: CHANGELOG.md  p6.cabal
2023/p7/: CHANGELOG.md  p7.cabal
2023/p8/: CHANGELOG.md  p8.cabal
2023/p9/: CHANGELOG.md  p9.cabal
2023/test/: test.cabal
2024/p1/: Cargo.toml
2024/p10/: Cargo.toml
2024/p11/: Cargo.toml
2024/p12/: Cargo.toml
2024/p13/: Cargo.toml
2024/p14/: Cargo.toml
2024/p15/: Cargo.toml
2024/p16/: Cargo.toml
2024/p17/: Cargo.toml  scratch.txt
2025/: Cargo.toml
2025/p1/: Cargo.toml
2025/p1/src/: main.rs
2025/p2/: Cargo.toml
2025/p2/src/: main.rs
2025/src/: main.rs  p1.rs  p10.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs  solution.rs
p1/: Cargo.toml
p1/src/: main.rs
p17/: Cargo.toml  input.txt  rand_wind.py
p3/: Cargo.toml
p4/: Cargo.toml
p5/: Cargo.toml
p6/: Cargo.toml
utils/: Cargo.toml
(+102 files in other folders)
