[package]
name = "y2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
util = { path = "../util" }
sieve-rs = { git = "https://github.com/ClaytonKnittel/sieve-rs", rev = "1b6d4386c337a2e1e4da3d9b7821bef9fba7cccd" }
clap = { version = "4.5.53", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
