[package]
name = "p17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
utils = { path = "../utils" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
strip = "symbols"
